force-app/main/default/objects/Asignacion_de_INPC__c/Asignacion_de_INPC__c.object-meta.xml
<CustomObject>
    <label>Asignación de INPC</label>
    <nameField>
        <label>Asignación de INPC</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Asignación de INPC</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>