force-app/main/default/objects/Asignacion_de_INPC__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Asignación de INPC</relationshipLabel>
    <relationshipName>Asignacion_de_INPC</relationshipName>
    <type>Lookup</type>
</CustomField>