force-app/main/default/objects/Asignacion_de_INPC__c/fields/Comentarios_INPC_Vendedor__c.field-meta.xml
<CustomField>
    <fullName>Comentarios_INPC_Vendedor__c</fullName>
    <label>Comentarios INPC Vendedor</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>