force-app/main/default/objects/Asignacion_de_INPC__c/fields/Diferencial__c.field-meta.xml
<CustomField>
    <fullName>Diferencial__c</fullName>
    <formula>MRC_c_Inflacion__c - MRC__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Diferencial</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>