force-app/main/default/objects/Asignacion_de_INPC__c/fields/INPC__c.field-meta.xml
<CustomField>
    <fullName>INPC__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>INPC</label>
    <referenceTo>INPC__c</referenceTo>
    <relationshipLabel>Asignación de INPC</relationshipLabel>
    <relationshipName>Asignacion_de_INPC</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>