force-app/main/default/objects/Asignacion_de_INPC__c/fields/INPC_Aprobado__c.field-meta.xml
<CustomField>
    <fullName>INPC_Aprobado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>INPC Aprobado</label>
    <type>Checkbox</type>
</CustomField>