force-app/main/default/objects/Asignacion_de_INPC__c/fields/INPC_Negociacion__c.field-meta.xml
<CustomField>
    <fullName>INPC_Negociacion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>INPC Negociacion</label>
    <type>Checkbox</type>
</CustomField>