force-app/main/default/objects/Asignacion_de_INPC__c/fields/INPC_Negociado__c.field-meta.xml
<CustomField>
    <fullName>INPC_Negociado__c</fullName>
    <label>% INPC Negociado</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>