force-app/main/default/objects/Asignacion_de_INPC__c/fields/INPC_Pactado__c.field-meta.xml
<CustomField>
    <fullName>INPC_Pactado__c</fullName>
    <label>% INPC</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>