force-app/main/default/objects/Asignacion_de_INPC__c/fields/Mes_que_aplico__c.field-meta.xml
<CustomField>
    <fullName>Mes_que_aplico__c</fullName>
    <label>Mes que aplicó</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Enero</fullName>
            </value>
            <value>
                <fullName>Febrero</fullName>
            </value>
            <value>
                <fullName>Marzo</fullName>
            </value>
            <value>
                <fullName>Abril</fullName>
            </value>
            <value>
                <fullName>Mayo</fullName>
            </value>
            <value>
                <fullName>Junio</fullName>
            </value>
            <value>
                <fullName>Julio</fullName>
            </value>
            <value>
                <fullName>Agosto</fullName>
            </value>
            <value>
                <fullName>Septiembre</fullName>
            </value>
            <value>
                <fullName>Octubre</fullName>
            </value>
            <value>
                <fullName>Noviembre</fullName>
            </value>
            <value>
                <fullName>Diciembre</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>