force-app/main/default/objects/Asignacion_de_INPC__c/fields/MRC_c_Inflacion__c.field-meta.xml
<CustomField>
    <fullName>MRC_c_Inflacion__c</fullName>
    <label>MRC c/ Inflación</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>