force-app/main/default/objects/Asignacion_de_INPC__c/fields/Objetivo_de_Inflacion__c.field-meta.xml
<CustomField>
    <fullName>Objetivo_de_Inflacion__c</fullName>
    <description>INPC heredado del objeto INPC el cual es el valor publicad en el DOF</description>
    <label>Objetivo de Inflación</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>