force-app/main/default/objects/Asignacion_de_INPC__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Asignación de INPC</relationshipLabel>
    <relationshipName>Asignacion_de_INPC</relationshipName>
    <type>Lookup</type>
</CustomField>