force-app/main/default/objects/Asignacion_de_INPC__c/fields/Periodo__c.field-meta.xml
<CustomField>
    <fullName>Periodo__c</fullName>
    <label>Periodo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>