force-app/main/default/objects/Asignacion_de_INPC__c/fields/Renovacion__c.field-meta.xml
<CustomField>
    <fullName>Renovacion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Renovacion</label>
    <type>Checkbox</type>
</CustomField>