force-app/main/default/objects/Asignacion_de_INPC__c/fields/Vigencia_de_Inicio__c.field-meta.xml
<CustomField>
    <fullName>Vigencia_de_Inicio__c</fullName>
    <label>Vigencia de Inicio</label>
    <type>Date</type>
</CustomField>