force-app/main/default/objects/Asignacion_de_INPC__c/recordTypes/Cuenta_INPC.recordType-meta.xml
<RecordType>
    <fullName>Cuenta_INPC</fullName>
    <active>true</active>
    <label>Cuenta INPC</label>
</RecordType>