force-app/main/default/objects/Asignacion_de_INPC__c/recordTypes/Oportunidad_INPC.recordType-meta.xml
<RecordType>
    <fullName>Oportunidad_INPC</fullName>
    <active>true</active>
    <label>Oportunidad INPC</label>
</RecordType>